Utils.clearString bugfix: in some versions of java String contains from bytes, not chars; setAccessible on string chars may throw an InaccessibleObjectException for some versions of JVM; Tests: added test for Utils.clearString method; pom: version updated